feat(styles): sync from upstream

--- a/custom/less/app.lite.less
+++ b/custom/less/app.lite.less
@@ -25,7 +25,7 @@
 // Components
 // Components are defined by functions
 @import "ui-logo-font";
-// @import "ui-icon";
+@import "ui-icon";
 @import "ui-type";
 @import "ui-grid";
 @import "ui-navbar";
