--- a/custom/less/plugin-angularstrap.less
+++ b/custom/less/plugin-angularstrap.less
@@ -43,8 +43,8 @@
 
 
 .datepicker.dropdown-menu {
-    width: 250px;
-    height: 270px;
+    width: 300px;
+    height: auto;
     padding: 4px;
 
     th.dow {
