--- a/custom/less/plugin-bootstrap-slider.less
+++ b/custom/less/plugin-bootstrap-slider.less
@@ -39,7 +39,7 @@
     width: 210px;
     height: @slider-line-height;
     .slider-track {
-      height: (@slider-line-height/2);
+      height: (@slider-line-height / 2 - 1px);
       width: 100%;
       margin-top: (-@slider-line-height/4);
       top: 50%;
@@ -161,6 +161,12 @@
   filter: none;
   box-shadow: 0 0 0 1px rgba(0,0,0,.05), 0 2px 4px rgba(0,0,0,.1);
   border: 0px solid transparent;
+
+  &:active,
+  &:focus {
+    .form-focus(@brand-primary, 15%);
+    box-shadow+: 0 0 0 1px fade(@link-color, 60%), 0 2px 4px rgba(0,0,0,.1);
+  }
   &.round {
     border-radius: 50%;
   }
