--- a/custom/less/section-basic.less
+++ b/custom/less/section-basic.less
@@ -276,6 +276,10 @@
 // Close icon for new modal (Bootstrap 3.1.1+)
 .modal-header .close {
   margin-top: 3px;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 
