--- a/custom/less/section-leananalytics.less
+++ b/custom/less/section-leananalytics.less
@@ -321,11 +321,6 @@
   }
 }
 
-.table-date-selector {
-  margin-top: 6px;
-  margin-left: 10px;
-}
-
 .data-export-btn {
   margin-top: 6px;
 }
@@ -347,9 +342,16 @@
 }
 
 .table-date-selector {
+  margin-top: 6px;
+  margin-left: 10px;
 
   input {
     cursor: pointer;
+    border: none;
+    padding: 0;
+    background: transparent;
+    height: auto;
+    width: 80px !important;
   }
 }
 
