--- a/custom/less/ui-logo-font.less
+++ b/custom/less/ui-logo-font.less
@@ -8,5 +8,9 @@
        url('../fonts/nootype_-_radikal_bold-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+}
 
+.font-logo {
+  font-family: radikal, @font-family-sans-serif;
+  font-weight: normal;
 }
