--- a/custom/less/app-docs.less
+++ b/custom/less/app-docs.less
@@ -1,6 +1,5 @@
 // Bootstrap Loader
 // Load Bootstrap from app/components/bootstrap/
-// @import "loader-bootstrap";
 @import "bootstrap/bootstrap";
 
 // Custom theme for Bootstrap
@@ -18,6 +17,8 @@
 // @import "plugin-angularstrap";
 @import "plugin-solarized-light";
 // @import "plugin-odometer-theme-default";
+// @import "plugin-bootstrap-slider";
+// @import "plugin-nprogress";
 
 // Plug-ins Customizations
 // Override plug-in styles
