--- a/custom/less/section-leanstorage.less
+++ b/custom/less/section-leanstorage.less
@@ -63,8 +63,11 @@
 // app-cloud-repository.html
 .cloud-log {
 
+  .btn-group + .btn-group {
+    margin-left: 10px;
+  }
+
   .form-group {
-    margin-right: 20px;
 
     &:last-child {
       margin-right: 0;
@@ -133,7 +136,7 @@ select.input-sm.cloud-stat-condition {
   }
 
   .no-timestamp & {
-    left: 50px;
+    left: (@cloud-log-level-width + 10px);
 
     .icon {
       transform: rotate(180deg);
@@ -201,7 +204,7 @@ select.input-sm.cloud-stat-condition {
   float: left;
 
   .no-timestamp & {
-    width: 6ch;
+    width: (@cloud-log-level-width + 10px);
   }
 
   // Alternative position for medium screens
@@ -216,13 +219,13 @@ select.input-sm.cloud-stat-condition {
   white-space: pre;
   word-wrap: break-word;
   word-break: break-word;
-  width: calc(~"100% - 27ch");
+  width: calc(~"100% - 230px");
   float: left;
   border-left: 1px solid #eee;
   padding-left: 10px;
 
   .no-timestamp & {
-    width: calc(~"100% - 6ch");
+    width: calc(100% ~"-" (@cloud-log-level-width + 10px));
   }
 
   @media (max-width: @screen-sm-max) {
@@ -239,6 +242,7 @@ select.input-sm.cloud-stat-condition {
   }
 }
 
+@cloud-log-level-width: 44px;
 .cloud-log-level {
   color: @gray-light;
   background: #fff;
@@ -250,7 +254,7 @@ select.input-sm.cloud-stat-condition {
   font-size: 10px;
   border: 1px solid;
   opacity: .8;
-  width: 7ch;
+  width: @cloud-log-level-width;
   display: inline-block;
   text-align: center;
   vertical-align: middle;
@@ -262,13 +266,6 @@ select.input-sm.cloud-stat-condition {
 
 .cloud-log-level-info {
   color: @link-color;
-}
-
-.form-vertical-splitter {
-  margin-top: 1px;
-  border-left: 1px solid #eee;
-  padding-left: 20px;
-  margin-left: 20px;
 }
 
 // cloud-online.html
