fix(styles): wrong box-shadow for search box

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -136,12 +136,15 @@ body {
     .form-group {
       position: relative;
 
-
       input {
         border: none;
         border-radius: 0;
         height: 32px;
         padding-left: 34px;
+
+        &:focus {
+          box-shadow: none;
+        }
       }
 
       // Override icon styles
