cal docs ready for review except Python(woking).

--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -1,4 +1,4 @@
-# LeanCloud 权限管理使用规范-{% block language_version %}{% endblock %}
+# LeanCloud 权限管理使用规范 - {% block language_version %}{% endblock %}
 
 
 数据安全在应用开发的任何阶段都应该被重视。因此本文档我们详细介绍了在选择 LeanCloud 作为后端服务之后，如何使用 LeanCloud 提供的安全功能模块为开发者的应用以及数据提供安全保障。
@@ -94,8 +94,8 @@
 
 为了方便开发者实现基于角色的权限管理，LeanCloud 在 SDK 中集成了一套完整的 ACL(Access Control List) 系统。通俗的解释就是为每一个数据创建一个访问的白名单列表，只有在名单上的用户(AVUser)或者具有某种角色(AVRole)的用户才能被允许访问。为了更好地保证用户数据安全性， LeanCloud 表中每一张都有一个 ACL 列。当然，LeanCloud 还提供了进一步的读写权限控制。一个 User 必须拥有读权限（或者属于一个拥有读权限的 Role）才可以获取一个对象的数据，同时，一个 User 需要写权限（或者属于一个拥有写权限的 Role）才可以更改或者删除一个对象。 以下列举了几种在 LeanCloud 常见的 ACL 使用范例
 
-## ACL 权限管理
-### 默认权限
+### ACL 权限管理
+#### 默认权限
 
 在没有显式指定的情况下，LeanCloud 中的每一个对象都会有一个默认的 ACL 值。这个值代表了，所有的用户，对这个对象都是可读可写的。此时你可以在数据管理的表中 ACL 属性中看到这样的值:
 
@@ -107,7 +107,9 @@
 ### 角色的权限管理
 
 #### 角色的创建
-角色创建实例代码如下，这段代码执行的结果就是在服务端创建一个叫做 `Administrator` 的角色：
+首先，我们来创建一个 `Administrator` 的角色。
+
+这里有一个需要特别注意的地方，因为 `AVRole` 本身也是一个 `AVObject`，它自身也有 ACL 控制，并且它的权限控制应该更严谨，如同「论坛的管理员有权力任命版主，而版主无权任命管理员」一样的道理，所以创建角色的时候需要显式地设定该角色的 ACL，而角色是一种较为稳定的对象：
 
 {% block create_role_administrator %}
 
@@ -232,6 +234,15 @@ update | 保存一个已经存在并且被修改的对象
 所有用户 | 任意用户均有权限
 登录用户 | 用户登陆之后，具有权限
 指定用户| 可以指定具体的用户（`AVUser`）也可以指定具体的角色（`AVRole`）
+
+
+## 最佳实践
+本章节的目的是介绍如何在[云引擎](/acl_guide_leanengine.html)里面使用 ACL 。
+
+我们先来探索一个需求：某个应用它拥有众多客户端，iOS，Andorid，Windows等，还有 Web 版，未来可能还会有手环，手表客户端，那么关于 ACL 的代码会遍布在所有客户端，那么开发者就会需要不断的升级和维护逻辑十分类似的客户端代码，到了这一步，我们更推荐，开发者在服务端定义一段 ACL 的逻辑，统一处理 ACL 权限分配的问题。
+
+总结：假如应用的平台比较固定，那么就可以考虑采取本文前面所介绍的客户端代码实现 ACL 代码。如果应用的平台比较多，多平台多客户端就推荐使用[云引擎 Hook 函数使用 ACL](/acl_guide_leanengine.html)
+
 
 
 
