--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -1,4 +1,4 @@
-# LeanCloud 权限管理使用规范 - {% block language_version %}{% endblock %}
+# {% block language_version %}{% endblock %} - 权限管理使用规范
 
 
 数据安全在应用开发的任何阶段都应该被重视。因此本文档我们详细介绍了在选择 LeanCloud 作为后端服务之后，如何使用 LeanCloud 提供的安全功能模块为开发者的应用以及数据提供安全保障。
