--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -67,7 +67,7 @@
 再进一步的场景：
 论坛升级，需要一个特定的管理员（Administrator）来统一管理论坛的帖子，他可以修改帖子的内容，删除不合适的帖子。
 
-论坛升级之后，用户发布帖子的步骤需要针对上一小节做如下：
+论坛升级之后，用户发布帖子的步骤需要针对上一小节做如下调整：
 
 1. 写一篇帖子
 2. 设置帖子的「读」权限为所有人。
@@ -78,7 +78,7 @@
 
 假如做权限管理功能的时候都依赖基于用户的权限管理，那么一旦产生变化就会发现这种实现方式的局限性。
 
-比如新增了一个管理员，新的管理员需要针对目前论坛所有的帖子拥有管理员应有的权限，那么我们需要把数据库现有的所有帖子循环一边，为新的管理员增加「写」权限。
+比如新增了一个管理员，新的管理员需要针对目前论坛所有的帖子拥有管理员应有的权限，那么我们需要把数据库现有的所有帖子循环一遍，为新的管理员增加「写」权限。
 
 假如论坛又一次升级了，付费会员享有特殊帖子的读权限，那么我们需要在发布新帖子的时候，设置「读」权限给部分人（付费会员）。这需要查询所有付费会员并一一设置。
 
@@ -147,7 +147,7 @@
 {% block add_role_for_user %}
 {% endblock %}
 
-角色赋予成功之后，就已经完成了，基于角色的权限管理的功能才算完成。
+角色赋予成功之后，基于角色的权限管理的功能才算完成。
 
 另外，此处不得不提及的就是角色的剥夺：
 
