--- a/views/acl_quick_start.tmpl
+++ b/views/acl_quick_start.tmpl
@@ -6,7 +6,7 @@
 
 Q：AppId 和 AppKey 泄露了怎么办？
 
-众所周知，在使用 LeanCloud SDK 的时候，是需要在客户端显示的调用初始化的方法设置 AppId 以及 AppKey，这就存在一种可能：竞争对手把你的 apk 或者打包好的安装程序进行反编译，他并不需要完全读懂你的业务逻辑代码，他只要提取出 AppId 以及 AppKey 就可以模拟客户端进行恶意的提交请求，后果不堪设想。这是一种泄露的可能性，危害极大。
+众所周知，在使用 LeanCloud SDK 的时候，是需要在客户端显式调用初始化的方法设置 AppId 以及 AppKey，这就存在一种可能：竞争对手把你的 apk 或者打包好的安装程序进行反编译，他并不需要完全读懂你的业务逻辑代码，他只要提取出 AppId 以及 AppKey 就可以模拟客户端进行恶意的提交请求，后果不堪设想。这是一种泄露的可能性，危害极大。
 
 还有一种可能性，开发团队的成员离职了，AppId 和 AppKey 都被 TA 曾经使用或者查看过，那么这也是一种隐患，因此，我们始终认为 AppId 和 AppKey 在面对因为人为造成的不可控的局面的时候，它的防御体系还不能满足应用安全需求，因此我们设计了 ACL 权限管理模块来帮助实现权限的管理。
 
