--- a/views/acl_quick_start.tmpl
+++ b/views/acl_quick_start.tmpl
@@ -14,59 +14,71 @@ Q：AppId 和 AppKey 泄露了怎么办？
 
 A：首先，我们推荐所有基于 LeanCloud 开发的团队的成员都采取协作者的方式参与实际的开发，再者是做好应用安装包的加密和分发管理，当然最有效的方法就是严格按照文档所建议的采用 ACL 的权限控制来做好服务端数据的权限管理，LeanCloud 不管是 SDK 还是 REST API 请求都会对 ACL 做严格的验证，鉴权失败的请求不会生效。
 
-接下来我们用一张简略的表格来介绍使用 ACL 和不使用的一些差异。
+接下来我们用 2 张表格来介绍使用 ACL 和不使用的一些差异。
 
-
-<table style="width:100%">
-  <tr>
-    <td>解释和步骤</td>
-    <td align="center">不使用 ACL</td> 
-    <td align="center">使用 ACL</td>
-  </tr>
-  
+<table>
+  <tr><td colspan="2" align="center"><strong>不使用 ACL</strong></td></tr>
   <tr>
     <td>实现代码</td>
     <td valign ="top">{% block code_not_use_acl %}{% endblock %}</td> 
-    <td valign ="top">{% block code_use_acl %}{% endblock %}</td>
   </tr>
-  
   <tr>
-    <td>执行结果</td>
+    <td nowrap="">执行结果</td>
     <td><a href="http://ac-lhzo7z96.clouddn.com/1441871966815" target="_blank"> <img src='http://ac-lhzo7z96.clouddn.com/1441871966815' width="480"/></a></td> 
-    <td> <a href="http://ac-lhzo7z96.clouddn.com/1441872019975" target="_blank"> <img src='http://ac-lhzo7z96.clouddn.com/1441872019975' width="480"/></a></td>
   </tr>
   <tr>
     <td>模拟请求</td>
-  <td align="left"><pre>curl -X PUT \
+    <td align="left"><pre>curl -X PUT \
   -H "X-LC-Id:m7baukzusy3l5coew0b3em5uf4df5i2krky0ypbmee358yon" \
   -H "X-LC-Key:wzlzc2ncc7srg1uox5w2eolqpt8vidn8wsk40ce1676ieqxz" \ 
   -H "Content-Type: application/json" \
   -d '{"content": "修改内容！"}' \
-  https://api.leancloud.cn/1.1/classes/Post/55f10b1e60b227b7b0319d71</pre></td>  
-  <td align="left"><pre>curl -X PUT \
+  https://api.leancloud.cn/1.1/classes/Post/55f10b1e60b227b7b0319d71</pre></td>    
+  </tr>
+  <tr>
+    <td>请求结果</td>
+    <td><pre>{"updatedAt":"2015-09-10T06:52:14.137Z","objectId":"55f10b1e60b227b7b0319d71"}</pre></p>请求成功，查看控制台，数据已被修改。
+    </td> 
+  </tr>
+  <tr>
+    <td>原因</td>
+    <td>未设置 ACL 属性，修改成功。只要拥有 AppId 和 AppKey 就可以提交请求，而云端会接收请求，因为它的 ACL 值是允许所有人可写可读，所以请求被云端接收。</td> 
+  </tr></tbody>
+</table>
+
+
+<table>
+  <tr><td colspan="2" align="center"><strong>使用 ACL</strong></td></tr>
+  <tr>
+    <td>实现代码</td>
+    <td valign ="top">{% block code_use_acl %}{% endblock %}</td>
+  </tr>
+  <tr>
+    <td nowrap="">执行结果</td>
+    <td><a href="http://ac-lhzo7z96.clouddn.com/1441871966815" target="_blank"> <img src='http://ac-lhzo7z96.clouddn.com/1441871966815' width="480"/></a></td> 
+  </tr>
+  <tr>
+    <td>模拟请求</td>
+    <td align="left"><pre>curl -X PUT \
   -H "X-LC-Id:m7baukzusy3l5coew0b3em5uf4df5i2krky0ypbmee358yon" \
   -H "X-LC-Key:wzlzc2ncc7srg1uox5w2eolqpt8vidn8wsk40ce1676ieqxz" \ 
   -H "Content-Type: application/json" \
   -d '{"content": "修改内容！"}' \
   https://api.leancloud.cn/1.1/classes/Post/55f108f260b23c9d702330aa</pre></td>  
-  </tr>
-  
+  </tr>  
   <tr>
     <td>请求结果</td>
-<td><pre>{"updatedAt":"2015-09-10T06:52:14.137Z","objectId":"55f10b1e60b227b7b0319d71"}</pre></p>请求成功，查看控制台，数据已被修改。</td> 
-    <td><pre>{"code":1,"error":"Forbidden writing by object's ACL."}</pre></p>请求失败，查看控制台，数据未被修改。
+    <td><pre>{"code":1,"error":"Forbidden writing by object's ACL."}</pre></p>**请求失败**，查看控制台，数据未被修改。
     </td>
   </tr>
   <tr>
     <td>原因</td>
-    <td>未设置 ACL 属性，修改成功。只要拥有 AppId 和 AppKey 就可以提交请求，而服务端会接收请求，因为它 ACL 值是允许所有人可写可读，所以请求被服务端接收。</td> 
-    <td>设置了 ACL 属性，请求失败，服务端发现修改请求并没有携带用户的 SessionToken，而 ACL 的值显示该条 Post 只允许一个特定的用户修改，所以请求被服务端拒绝。</td>
+    <td>设置了 ACL 属性，请求失败，云端发现修改请求并没有携带用户的 SessionToken，而 ACL 的值显示该条 Post 只允许一个特定的用户修改，所以请求被云端拒绝。</td>
   </tr>
 </table>
 
 
-以上表格仅作一个对比，关于 ACL 权限控制的详细用法请参照{% block link_to_acl_guide %}{% endblock %}
-
+通过以上 2 张表格的对比仅仅是为了演示 ACL 的一个基本用法，关于 ACL 权限控制的详细用法请参照{% block link_to_acl_guide %}{% endblock %}
 
 
 ## FAQ
