--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -83,7 +83,7 @@
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
           <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
-          <li><a href="acl_guide-ios.html">权限管理使用规范</a></li>
+          <li><a href="acl_guide-ios.html">权限管理使用指南</a></li>
           <li><a href="ios_statistics.html">统计分析开发指南</a></li>
           <li><a href="ios_os_x_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
@@ -101,7 +101,7 @@
           <li><a href="android_guide.html">数据存储开发指南</a></li>
           <li><a href="android_push_guide.html">消息推送开发指南</a></li>
           <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
-          <li><a href="acl_guide-android.html">权限管理使用规范</a></li>
+          <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
           <li><a href="android_statistics.html">统计分析开发指南</a></li>
           <li><a href="android_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
@@ -118,7 +118,7 @@
           <li><a href="js_guide.html">数据存储开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
           <li><a href="js_realtime.html">实时通信开发指南</a></li>
-          <li><a href="acl_guide-js.html">权限管理使用规范</a></li>
+          <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
           <li><a href="js_analytics.html">统计分析开发指南</a></li>
           <li><a href="js_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="js_faq.html">FAQ</a></li>
@@ -186,6 +186,7 @@
           <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云代码环境）</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
+          <li><a href="acl_guide_leanengine.html">在 LeanEngine 中使用 ACL</a></li>
           <li><a href="cloud_code_faq.html">FAQ</a></li>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
         </ul>
