经过泡面和陈伟的建议，以及我个人的「深思熟虑」，决定改成「在云引擎中管理 ACL」，这个文档的内容很短，就是简简单单的一个 web hook 演示如何在 云引擎 Hook 函数中设置 ACL，因此，还请达叔确认。3ks

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -186,7 +186,7 @@
           <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云代码环境）</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
-          <li><a href="acl_guide_leanengine.html">在 LeanEngine 中使用 ACL</a></li>
+          <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
           <li><a href="cloud_code_faq.html">FAQ</a></li>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
         </ul>
