--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimal-ui">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>LeanCloud 文档</title>
 <script src="//cdn1.lncld.net/static/js/av-mini-0.5.4.js"></script>
