Add PHP quick start guide

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -42,6 +42,14 @@ title: 快速入门 - LeanCloud
 
         <div class="radio custom-control">
           <label>
+            <input type="radio" ng-model="selectedPlat" value="php">
+            <span class="control-indicator"></span>
+            PHP
+          </label>
+        </div>
+
+        <div class="radio custom-control">
+          <label>
             <input type="radio" ng-model="selectedPlat" value="unity">
             <span class="control-indicator"></span>
             Unity
