编写 Android SDK 安装指南。请达叔过目。

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -3,11 +3,11 @@
 ## 获取 SDK
 获取 SDK 有多种方式，较为推荐的方式是通过包依赖管理工具下载最新版本。
 
-### 包依赖管理工具
+### 包依赖管理工具安装
 
 {% block libs_tool_automatic %}{% endblock %}
 
-### 直接下载
+### 手动安装
 下载最新版本的 {% block language %}{% endblock %} SDK 请点击:{% block sdk_download_link %}{% endblock %}
 
 {% block import_sdk %}{% endblock %}
@@ -67,4 +67,4 @@ PING api.leancloud.cn (120.132.49.239): 56 data bytes
 
 {% block permission_access_network_config %}{% endblock %}
 
-
+{% block platform_specific_faq %}{% endblock %}
