--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -3,7 +3,7 @@
 
 数据安全在应用开发的任何阶段都应该被重视。因此本文档我们详细介绍了在选择 LeanCloud 作为后端服务之后，如何使用 LeanCloud 提供的安全功能模块为开发者的应用以及数据提供安全保障。
 
-如果您尚未对权限管理以及 ACL 的进行过了解，请查看{% block link_to_acl_quickStart %}{% endblock %}
+如果您尚未对权限管理以及 ACL 的进行过了解，请查看 {% block link_to_acl_quickStart %}{% endblock %}。
 
 ## 需求场景
 
