--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -23,4 +23,4 @@
 <!-- endbuild -->
 
 
-<link rel="stylesheet" type="text/css" href="custom/css/app-docs.css">
+<link rel="stylesheet" type="text/css" href="custom/css/app-docs.css?githubv1">
