let dynamic download as a link, not a button

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -36,14 +36,15 @@
           <hr>
 
           <a class="btn btn-sm btn-primary dl-cell-btn" ng-click="download('ios', 'Static')" title="静态库最低支持 iOS 6.0，具体可参考 iOS 快速入门指南">
-          下载静态库<span>- {{getDownSize('ios', 'Static')}}</span>
-          </a>
-
-          <a class="btn btn-sm btn-primary dl-cell-btn" ng-click="download('ios', 'Dynamic')" title="动态库最低支持 iOS 8.0, 具体可参考 iOS 快速入门指南">
-          下载动态库<span>- {{getDownSize('ios', 'Dynamic')}}</span>
+          下载<span>- {{getDownSize('ios')}}</span>
           </a>
 
           <ul class="list-inline">
+            <li>
+              <a ng-click="download('ios', 'Dynamic')" title="动态库最低支持 iOS 8.0, 具体可参考 iOS 快速入门指南">
+              动态库
+              </a>
+            </li>
             <li>
               <a href="https://download.leancloud.cn/sdk/ios_feed.xml" class="changelog-rss bstooltip" title="iOS SDK RSS"><i class="icon icon-rss"></i></a>
               <a href="#sdk-changelog" data-toggle="modal" data-target="#modal-ios-changelog">更新历史</a>
